2008-03-31  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Maciej Stachowiak.
        
        Next steps toward global code:
        
        * Moved access to the register file into JSVariableObject.
        
        * Added more ASSERTs to indicate obsolete APIs there are just hanging
        around to stave off build failures.

        * kjs/JSGlobalObject.h:
        (KJS::JSGlobalObject::JSGlobalObjectData::JSGlobalObjectData):
        * kjs/JSVariableObject.h:
        (KJS::JSVariableObject::registers):
        (KJS::JSVariableObject::JSVariableObjectData::JSVariableObjectData):
        (KJS::JSVariableObject::JSVariableObject):

2008-03-31  Sam Weinig  <sam@webkit.org>

        Reviewed by Oliver. Tweaked somewhat by Maciej.
        
        - implement codegen for ReadModifyResolveNode

        * kjs/nodes.cpp:
        (KJS::emitReadModifyAssignment):
        (KJS::ReadModifyResolveNode::emitCode):
        * kjs/nodes.h:

2008-03-31  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Geoff.

        Fix the build -- r31492 removed activation tear-off, but r31493 used it.

        * kjs/nodes.cpp:
        (KJS::FuncExprNode::makeFunction):

2008-03-31  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Maciej.

        Add support for FuncExprNode to SquirrelFish.

        * VM/CodeBlock.cpp:
        (KJS::CodeBlock::dump):
        * VM/CodeBlock.h:
        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::addConstant):
        (KJS::CodeGenerator::emitNewFunctionExpression):
        * VM/CodeGenerator.h:
        * VM/Machine.cpp:
        (KJS::Machine::privateExecute):
        * VM/Opcode.h:
        * kjs/nodes.cpp:
        (KJS::FuncExprNode::emitCode):
        (KJS::FuncExprNode::makeFunction):
        * kjs/nodes.h:

2008-03-31  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Maciej Stachowiak.
        
        First step toward global code: removed some obsolete JSGlobalObject